2011-04-27  Csaba Osztrogonác  <ossy@webkit.org>

        Convert LayoutTests/fast/events/mouseout-dead-node.html from pixel test to text-based test
        https://bugs.webkit.org/show_bug.cgi?id=59369

        [Qt] Qt specific expected result is unnecessary after r85163.

        * platform/qt/fast/events/mouseout-dead-node-expected.txt: Removed.

2011-04-27  Naoki Takano  <takano.naoki@gmail.com>

        Reviewed by Ryosuke Niwa.

        Convert LayoutTests/fast/events/mouseout-dead-node.html from pixel test to text-based test
        https://bugs.webkit.org/show_bug.cgi?id=59369

        * fast/events/mouseout-dead-node-expected.txt: Added.
        * fast/events/mouseout-dead-node.html: Change to use dumpAsText.
        * platform/chromium-linux/fast/events/mouseout-dead-node-expected.png: Removed.
        * platform/chromium-win/fast/events/mouseout-dead-node-expected.png: Removed.
        * platform/chromium-win/fast/events/mouseout-dead-node-expected.txt: Removed.
        * platform/gtk/fast/events/mouseout-dead-node-expected.txt: Removed.
        * platform/mac-leopard/fast/events/mouseout-dead-node-expected.png: Removed.
        * platform/mac/fast/events/mouseout-dead-node-expected.png: Removed.
        * platform/mac/fast/events/mouseout-dead-node-expected.txt: Removed.

2011-04-27  Kenneth Russell  <kbr@google.com>

        Chromium test failures after r85142
        https://bugs.webkit.org/show_bug.cgi?id=59673

        Unreviewed. Temporarily suppress test failures.

        * platform/chromium/test_expectations.txt:

2011-04-27  Eric Seidel  <eric@webkit.org>

        Reviewed by Ojan Vafai.

        Log more information when http/tests/xmlhttprequest/basic-auth.html fails
        https://bugs.webkit.org/show_bug.cgi?id=59651

        Very basic, but it's better than nothing.

        * http/tests/xmlhttprequest/basic-auth.html:

2011-04-27  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.
