@@ -1,3 +1,13 @@
+2011-04-28  Gabor Rapcsanyi  <rgabor@webkit.org>
+
+        Reviewed by Csaba Osztrogonác.
+
+        [Qt] Add ARM specific Skipped list
+        https://bugs.webkit.org/show_bug.cgi?id=59680
+
+        * Scripts/old-run-webkit-tests:
+        * Scripts/webkitdirs.pm:
+
 2011-04-27  Eric Seidel  <eric@webkit.org>
 
         Reviewed by Adam Barth.
